# rkt

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.in  README.md  ROADMAP.md  Vagrantfile  build  configure  configure.ac  glide.yaml  test
.github/: PULL_REQUEST_TEMPLATE.md
Documentation/: app-container.md  app-environment.md  apparmor.md  build-configure.md  capabilities-guide.md  commands.md  configuration.md  dependencies.md  distributions.md  getting-started-guide.md  getting-started-ubuntu.md  hacking.md  image-fetching-behavior.md  install-rkt-in-coreos.md  networking.md  packaging.md  rkt-build-rkt.md  rkt-vs-other-projects.md  running-docker-images.md  running-fly-stage1.md  running-kvm-stage1.md  seccomp-guide.md  selinux.md  signing-and-verification-guide.md  trying-out-rkt.md  using-rkt-with-kubernetes.md  using-rkt-with-nomad.md  using-rkt-with-systemd.md
Documentation/devel/: architecture.md  cgroups.md  distribution-point.md  log-attach-design.md  on-disk-format.md  pod-lifecycle.md  quickstart-dev.md  release.md  stage1-implementors-guide.md  tpm.md  update-coreos-stage1.md  user-namespaces.md
Documentation/networking/: dns.md  examples-bridge.md  overriding-defaults.md  overview.md
Documentation/performance/: README.md  rkt-1-4-0-benchmarks.md
Documentation/proposals/: app-level-api.md  oci.md
Documentation/subcommands/: api-service.md  cat-manifest.md  config.md  cp.md  enter.md  export.md  fetch.md  fly.md  gc.md  image.md  list.md  metadata-service.md  prepare.md  rm.md  run-prepared.md  run.md  status.md  stop.md  trust.md  version.md
Godeps/: Godeps.json
api/v1alpha/: README.md  api.pb.go  api.proto  client_example.go  example_client.py
app-container/ace/: validator.go
app-container/aci/: writer.go
app-container/actool/: build.go  validate.go
app-container/discovery/: discovery.go
app-container/schema/: app.go
cas/: aciinfo.go  aciinfo_test.go  appindex.go  cas.go  cas_test.go  db.go  fetcher.go  fetcher_test.go  remote.go  remote_test.go  utils.go
cmd/: fetch.go  metadatasvc.go  run.go
common/: arm_gc.go  arm_gccgo.go  common.go  errors.go  mount_linux.go  mount_unsupported.go
common/apps/: apps.go
common/cgroup/: cgroup.go
common/networking/: ports.go
common/overlay/: overlay.go
examples/dsfetch/: main.go
makelib/: aci_simple_go_bin.mk  misc.mk  variables.mk.in
metadata/: metadatasvc.go
network/: ipalloc.go  net-plugin.go  net.go  network.go
network/util/: net.go  setns.go  veth.go
networking/: net_plugin.go  networking.go  podenv.go  portfwd.go
networking/netinfo/: errors.go  netinfo.go  netinfo_linux.go  netinfo_unsupported.go
pkg/aci/: render.go
pkg/acirenderer/: acirenderer.go  acirenderer_test.go  store_test.go
pkg/backup/: backup.go
pkg/distribution/: docker-daemon.go
pkg/fileutil/: errors.go  fileutil.go  fileutil_linux.go  fileutil_test.go  fileutil_unsupported.go
pkg/kernelkeystore/: kernelkeystore.go
pkg/label/: label_selinux.go
pkg/lock/: dir.go  dir_test.go  file.go  file_test.go  keylock.go  keylock_test.go
pkg/multicall/: multicall.go
pkg/pod/: pods.go
pkg/selinux/: selinux.go
pkg/snap/: snapcraft.yaml
pkg/sys/: capability.go
pkg/tar/: chroot.go  tar.go
pkg/util/: aci.go
rkt/: api_service.go  api_service_test.go  app.go  app_add.go  app_sandbox.go  cli_apps.go  cli_apps_test.go  common.go  containers.go  containers_test.go  cp.go  enter.go  export.go  fetch.go  fetch_test.go  fly.go  gc.go  help.go  image.go  image_cat_manifest.go  image_export.go  image_extract.go  image_gc.go  image_gc_test.go  image_importoci.go  image_list.go  image_render.go  image_rm.go  images.go  imageslist.go  install.go  list-containers.go  list.go  metadata_service.go  metadatasvc.go  mounts.go  multi.go  path.go  pods.go  pods_test.go  (+15 more)
rkt/config/: auth.go  config.go  paths.go
rkt/flag/: gcflags.go  secflags.go
rkt/image/: common.go  docker-daemon-fetcher.go  dockerfetcher.go  fetcher.go  httpfetcher.go  httpops.go  namefetcher.go  pluginfetcher.go
rkt/pubkey/: pubkey.go
scripts/: install-deps-debian-sid.sh  install-rkt.sh
scripts/docs/: analytics-footer.py
scripts/pkg/: build-pkgs.sh
stage0/: common.go  enter.go  entrypoint.go  gc.go  ivolume.go  registration.go  run.go
stage1/: .gitignore  README.md  container.go  init.go  mkrootfs.sh  network.go  path.go  registration.go  secondary-stuff.mk  stage1.mk  stdlibdirs.mk
stage1/app_add/: app_add.go
stage1/dbus/: dbus.mk
stage1/enter/: enter.mk
stage1/gc/: gc.go
stage1/init/: container.go  init.go  kvm.go  path.go  pod.go  pod_test.go  registration.go
stage1/iottymux/: iottymux.go
stage1/net/: README.md
stage1/passwd/: group  passwd  passwd.mk
stage1/prepare-app/: prepare-app.c
stage1/reaper/: reaper.sh
stage1/runc/: runc.mk
stage1_skim/: stage1_skim.mk
store/: backup.go  cas.go  cas_test.go  main_test.go  remote.go  remote_test.go  store.go  store_test.go  tree.go  utils.go
tests/: README.md  aws.sh  build-and-run-tests.sh  functional.mk  install-deps.sh  rkt-empty.aci  rkt-inspect.aci  rkt_api_service_test.go  rkt_app_isolator_test.go  rkt_app_sandbox_test.go  rkt_caps_test.go  rkt_cp_test.go  rkt_devices_test.go  rkt_exit_test.go  rkt_export_test.go  rkt_fetch_test.go  rkt_fly_test.go  rkt_image_cat_manifest_test.go  rkt_image_dependencies_test.go  rkt_image_list_test.go  rkt_list_test.go  rkt_machine_id_test.go  rkt_net_nspawn_test.go  rkt_net_test.go  rkt_non_root_test.go  rkt_pid_file_test.go  rkt_privatenet_test.go  rkt_run_pod_manifest_test.go  rkt_selinux_test.go  rkt_stop_test.go  rkt_tests.go  rkt_trust_test.go  rkt_volume_test.go  run-build.sh  test  test-on-several-distro.md  tests.mk
torrent/: torrent.go  torrent.mk
(+171 files in other folders)
